# pl0x

./: README.md  pyproject.toml  setup.py  test.lox  test_interpreter.py  test_parser.py  test_scanner.py
.github/workflows/: cicd.yml  pr.yml  pytest.yml
app/: main.py
docs/: index.md
lox/: scanner.py  token_type.py
pl0x/: cli.py  scanner.py  token_type.py
pplox/: ast_printer.py  cli.py  environment.py  error_reporter.py  expr.py  interpreter.py  parser.py  scanner.py  stmt.py  token_type.py
